--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+@ARTICLE{Aubin2019b,
+       author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Baker}, Antoine and
+         {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
+        title = "{Exact asymptotics for phase retrieval and compressed sensing with random generative priors}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing, Mathematics - Probability, Statistics - Machine Learning},
+         year = "2019",
+        month = "May",
+          eid = {arXiv:1912.02008},
+        pages = {arXiv:1912.02008},
+        arxiv = {1912.02008},
+archivePrefix = {arXiv},
+       eprint = {1912.02008},
+ primaryClass = {math.ST},
+}
+
 @ARTICLE{Aubin2019,
        author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Maillard}, Antoine and
          {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
