--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,21 @@
 ---
 ---
 
+@ARTICLE{Gerace2020,
+       author = {{Gerace}, Federica and {Loureiro}, Bruno and
+         {Krzakala}, Florent and {M{\'e}zard}, Marc and {Zdeborov{\'a}}, Lenka},
+        title = "{Generalisation error in learning with random features and the hidden manifold model}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Mathematics - Probability, Statistics - Machine Learning},
+         year = "2020",
+        month = "February",
+          eid = {arXiv:2002.09339},
+        pages = {arXiv:2002.09339},
+        arxiv = {2002.09339},
+archivePrefix = {arXiv},
+       eprint = {2002.09339s},
+ primaryClass = {math.ST},
+}
 @ARTICLE{Aubin2019b,
        author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Baker}, Antoine and
          {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
