--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,5 @@
 ---
 ---
-
 @ARTICLE{Gerace2020,
        author = {{Gerace}, Federica and {Loureiro}, Bruno and
          {Krzakala}, Florent and {M{\'e}zard}, Marc and {Zdeborov{\'a}}, Lenka},
@@ -30,6 +29,17 @@ archivePrefix = {arXiv},
 archivePrefix = {arXiv},
        eprint = {1912.02008},
  primaryClass = {math.ST},
+}
+
+@incollection{NIPS2019_9045,
+title = {The spiked matrix model with generative priors},
+author = {Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborov\'{a}, Lenka},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8366--8377},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/9045-the-spiked-matrix-model-with-generative-priors.pdf}
 }
 
 @ARTICLE{Aubin2019,
