--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,15 +31,14 @@ archivePrefix = {arXiv},
  primaryClass = {math.ST},
 }
 
-@incollection{NIPS2019_9045,
-title = {The spiked matrix model with generative priors},
+@Article{NIPS2019_9045,
 author = {Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborov\'{a}, Lenka},
-booktitle = {Advances in Neural Information Processing Systems 32},
-editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+title = {The spiked matrix model with generative priors},
+journal={Advances in Neural Information Processing Systems 32},
+year="2019",
+volume="32",
 pages = {8366--8377},
-year = {2019},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/9045-the-spiked-matrix-model-with-generative-priors.pdf}
+url="https://papers.nips.cc/paper/9045-the-spiked-matrix-model-with-generative-priors"
 }
 
 @ARTICLE{Aubin2019,
