--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+
+@article{maillard2020phase,
+    title={Phase retrieval in high dimensions: Statistical and computational phase transitions},
+    author={Antoine Maillard and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+    year={2020},
+    eprint={2006.05228},
+    arxiv = {2006.05228},
+    archivePrefix={arXiv},
+    primaryClass={math.ST}
+}
+
 @ARTICLE{Gerace2020,
        author = {{Gerace}, Federica and {Loureiro}, Bruno and
          {Krzakala}, Florent and {M{\'e}zard}, Marc and {Zdeborov{\'a}}, Lenka},
@@ -15,6 +26,7 @@ archivePrefix = {arXiv},
        eprint = {2002.09339s},
  primaryClass = {math.ST},
 }
+
 @ARTICLE{Aubin2019b,
        author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Baker}, Antoine and
          {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
