--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,23 +43,17 @@ archivePrefix = {arXiv},
  primaryClass = {math.ST},
 }
 
-@ARTICLE{Aubin2019,
-       author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Maillard}, Antoine and
-         {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
-        title = "{The spiked matrix model with generative priors}",
-      journal = {arXiv e-prints},
-     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing, Mathematics - Probability, Statistics - Machine Learning},
-         year = "2019",
-        month = "May",
-          eid = {arXiv:1905.12385},
-        pages = {arXiv:1905.12385},
-        arxiv = {1905.12385},
-archivePrefix = {arXiv},
-       eprint = {1905.12385},
- primaryClass = {math.ST},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190512385A},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@incollection{NIPS2019_9045,
+title = {The spiked matrix model with generative priors},
+author = {Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborov\'{a}, Lenka},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8366--8377},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/9045-the-spiked-matrix-model-with-generative-priors.pdf}
 }
+
 
 @Article{Andrade2018,
 author="Andrade, Tom{\'a}s
