--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{goldt2020phase,
+    title={The Gaussian equivalence of generative models for learning with shallow neural networks},
+    author={Sebastian Goldt and Bruno Loureiro and Galen Reeves and Florent Krzakala and Marc Mézard and Lenka Zdeborová},
+    year={2020},
+    eprint={2006.14709},
+    arxiv = {2006.14709},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
 @article{maillard2020phase,
     title={Phase retrieval in high dimensions: Statistical and computational phase transitions},
     author={Antoine Maillard and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
