--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{loureiro2021capturing,
+    title={Capturing the learning curves of generic features maps for realistic data sets with a teacher-student model},
+    author={Bruno Loureiro and Cédric Gerbelot and Hugo Cui and Sebastian Goldt and Florent Krzakala and Marc Mézard and Lenka Zdeborová},
+    year={2021},
+    eprint={2102.08127},
+    arxiv = {2102.08127},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
 @article{goldt2020phase,
     title={The Gaussian equivalence of generative models for learning with shallow neural networks},
     author={Sebastian Goldt and Bruno Loureiro and Galen Reeves and Florent Krzakala and Marc Mézard and Lenka Zdeborová},
