--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{cui2021generalization,
+    title={Generalization Error Rates in Kernel Regression: The Crossover from the Noiseless to Noisy Regime},
+    author={Hugo Cui and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+    year={2021},
+    eprint={2105.15004},
+    arxiv = {2105.15004},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
 @article{loureiro2021capturing,
     title={Capturing the learning curves of generic features maps for realistic data sets with a teacher-student model},
     author={Bruno Loureiro and Cédric Gerbelot and Hugo Cui and Sebastian Goldt and Florent Krzakala and Marc Mézard and Lenka Zdeborová},
