--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{loureiro2021learning,
+    title={Learning Gaussian Mixtures with Generalised Linear Models: Precise Asymptotics in High-dimensions},
+    author={Bruno Loureiro and Gabriele Sicuro and Cédric Gerbelot and Alessandro Pacco and Florent Krzakala and Lenka Zdeborová},
+    year={2021},
+    eprint={2106.03791},
+    arxiv = {2106.03791},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}s
+
 @article{cui2021generalization,
     title={Generalization Error Rates in Kernel Regression: The Crossover from the Noiseless to Noisy Regime},
     author={Hugo Cui and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
