--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,56 @@
 ---
 ---
 
+@article{clarte2022theoretical,
+      title={Theoretical characterization of uncertainty in high-dimensional linear classification},
+      author={Lucas Clarté and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2202.03295},
+      arxiv={2202.03295},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{veiga2022phase,
+      title={Phase diagram of Stochastic Gradient Descent in high-dimensional two-layer neural networks},
+      author={Rodrigo Veiga and Ludovic Stephan and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2202.00293},
+      arxiv={2202.00293},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{loureiro2022fluctuations,
+      title={Fluctuations, Bias, Variance & Ensemble of Learners: Exact Asymptotics for Convex Losses in High-Dimension},
+      author={Bruno Loureiro and Cédric Gerbelot and Maria Refinetti and Gabriele Sicuro and Florent Krzakala},
+      year={2022},
+      eprint={2201.13383},
+      arxiv={2201.13383},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{cui2022error,
+      title={Error Rates for Kernel Classification under Source and Capacity Conditions},
+      author={Hugo Cui and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2201.12655},
+      arxiv={2201.12655},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{bereyhi2022bayesian,
+    title={Bayesian Inference with Nonlinear Generative Models: Comments on Secure Learning},
+    author={Ali Bereyhi and Bruno Loureiro and Florent Krzakala and Ralf R. Müller and Hermann Schulz-Baldes},
+    year={2022},
+    eprint={2201.09986},
+    arxiv = {2201.09986},
+    archivePrefix={arXiv},
+    primaryClass={cs.IT}
+}
+
 @article{loureiro2021learning,
     title={Learning Gaussian Mixtures with Generalised Linear Models: Precise Asymptotics in High-dimensions},
     author={Bruno Loureiro and Gabriele Sicuro and Cédric Gerbelot and Alessandro Pacco and Florent Krzakala and Lenka Zdeborová},
@@ -9,7 +59,7 @@
     arxiv = {2106.03791},
     archivePrefix={arXiv},
     primaryClass={stat.ML}
-}s
+}
 
 @article{cui2021generalization,
     title={Generalization Error Rates in Kernel Regression: The Crossover from the Noiseless to Noisy Regime},
