--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,70 +3,226 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{clarte2022theoretical,
+      title={Theoretical characterization of uncertainty in high-dimensional linear classification},
+      author={Lucas Clarté and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2202.03295},
+      arxiv={2202.03295},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{veiga2022phase,
+      title={Phase diagram of Stochastic Gradient Descent in high-dimensional two-layer neural networks},
+      author={Rodrigo Veiga and Ludovic Stephan and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2202.00293},
+      arxiv={2202.00293},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@article{loureiro2022fluctuations,
+      title={Fluctuations, Bias, Variance & Ensemble of Learners: Exact Asymptotics for Convex Losses in High-Dimension},
+      author={Bruno Loureiro and Cédric Gerbelot and Maria Refinetti and Gabriele Sicuro and Florent Krzakala},
+      year={2022},
+      eprint={2201.13383},
+      arxiv={2201.13383},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{cui2022error,
+      title={Error Rates for Kernel Classification under Source and Capacity Conditions},
+      author={Hugo Cui and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2201.12655},
+      arxiv={2201.12655},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{bereyhi2022bayesian,
+    title={Bayesian Inference with Nonlinear Generative Models: Comments on Secure Learning},
+    author={Ali Bereyhi and Bruno Loureiro and Florent Krzakala and Ralf R. MÃ¼ller and Hermann Schulz-Baldes},
+    year={2022},
+    eprint={2201.09986},
+    arxiv = {2201.09986},
+    archivePrefix={arXiv},
+    primaryClass={cs.IT}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{loureiro2021learning,
+    title={Learning Gaussian Mixtures with Generalised Linear Models: Precise Asymptotics in High-dimensions},
+    author={Bruno Loureiro and Gabriele Sicuro and Cédric Gerbelot and Alessandro Pacco and Florent Krzakala and Lenka Zdeborová},
+    year={2021},
+    eprint={2106.03791},
+    arxiv = {2106.03791},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@article{cui2021generalization,
+    title={Generalization Error Rates in Kernel Regression: The Crossover from the Noiseless to Noisy Regime},
+    author={Hugo Cui and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+    year={2021},
+    eprint={2105.15004},
+    arxiv = {2105.15004},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@article{loureiro2021capturing,
+    title={Capturing the learning curves of generic features maps for realistic data sets with a teacher-student model},
+    author={Bruno Loureiro and Cédric Gerbelot and Hugo Cui and Sebastian Goldt and Florent Krzakala and Marc Mézard and Lenka Zdeborová},
+    year={2021},
+    eprint={2102.08127},
+    arxiv = {2102.08127},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@InProceedings{pmlr-v145-goldt21a,
+  title = 	 {he Gaussian equivalence of generative models for learning with shallow neural networks},
+  author =       {Goldt, Sebastian and Loureiro, Bruno and Reeves, Galen and Krzakala, Florent and Mézard, Marc and Zdeborov\'a, Lenka},
+  booktitle = 	 {Proceedings of The Second Mathematical and Scientific Machine Learning Conference},
+  pages = 	 {1--46},
+  year = 	 {2021},
+  editor = 	 {Bruna, Joan and Hesthaven, Jan S and Zdeborová, Lenka},
+  volume = 	 {145},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {16--19 Aug},
+  publisher =    {PMLR},
+  pdf = 	 {https://msml21.github.io/papers/id50.pdf},
+  url = 	 {https://msml21.github.io/papers/id50.pdf},
+}
+
+@InProceedings{pmlr-v107-aubin20a,
+  title = 	 {Exact asymptotics for phase retrieval and compressed sensing with random generative priors},
+  author =       {Aubin, Benjamin and Loureiro, Bruno and Baker, Antoine and Krzakala, Florent and Zdeborov\'a, Lenka},
+  booktitle = 	 {Proceedings of The First Mathematical and Scientific Machine Learning Conference},
+  pages = 	 {55--73},
+  year = 	 {2020},
+  editor = 	 {Lu, Jianfeng and Ward, Rachel},
+  volume = 	 {107},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {20--24 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v107/aubin20a/aubin20a.pdf},
+  url = 	 {https://proceedings.mlr.press/v107/aubin20a.html},
+}
+
+@inproceedings{NEURIPS2020_7ec0dbee,
+ author = {Maillard, Antoine and Loureiro, Bruno and Krzakala, Florent and Zdeborov\'{a}, Lenka},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin},
+ pages = {11071--11082},
+ publisher = {Curran Associates, Inc.},
+ title = {Phase retrieval in high dimensions: Statistical and computational phase transitions},
+ url = {https://proceedings.neurips.cc/paper/2020/file/7ec0dbeee45813422897e04ad8424a5e-Paper.pdf},
+ pdf = {https://proceedings.neurips.cc/paper/2020/file/7ec0dbeee45813422897e04ad8424a5e-Paper.pdf},
+ volume = {33},
+ year = {2020}
+}
+
+@InProceedings{pmlr-v119-gerace20a,
+  title = 	 {Generalisation error in learning with random features and the hidden manifold model},
+  author =       {Gerace, Federica and Loureiro, Bruno and Krzakala, Florent and Mezard, Marc and Zdeborova, Lenka},
+  booktitle = 	 {Proceedings of the 37th International Conference on Machine Learning},
+  pages = 	 {3452--3462},
+  year = 	 {2020},
+  editor = 	 {III, Hal Daumé and Singh, Aarti},
+  volume = 	 {119},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {13--18 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v119/gerace20a/gerace20a.pdf},
+  url = 	 {https://proceedings.mlr.press/v119/gerace20a.html},
+}
+
+@ARTICLE{9240945,
+  author={Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborová, Lenka},
+  journal={IEEE Transactions on Information Theory},
+  title={The Spiked Matrix Model With Generative Priors},
+  year={2021},
+  volume={67},
+  number={2},
+  pages={1156-1181},
+  doi={10.1109/TIT.2020.3033985}
+  }
+
+@inproceedings{NEURIPS2019_2f3c6a4c,
+ author = {Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborov\'{a}, Lenka},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {The spiked matrix model with generative priors},
+ url = {https://proceedings.neurips.cc/paper/2019/file/2f3c6a4cd8af177f6456e7e51a916ff3-Paper.pdf},
+ pdf = {https://proceedings.neurips.cc/paper/2019/file/2f3c6a4cd8af177f6456e7e51a916ff3-Paper.pdf},
+ volume = {32},
+ year = {2019}
+}
+
+@article{Andrade2018,
+author="Andrade, Tom{\'a}s
+and Garc{\'i}a-Garc{\'i}a, Antonio M.
+and Loureiro, Bruno",
+title="Coherence effects in disordered geometries with a field-theory dual",
+journal="Journal of High Energy Physics",
+year="2018",
+month="Mar",
+day="29",
+volume="2018",
+number="3",
+pages="187",
+issn="1029-8479",
+doi="10.1007/JHEP03(2018)187",
+url="https://doi.org/10.1007/JHEP03(2018)187"
+}
+
+@article{PhysRevLett.120.241603,
+  title = {Chaotic-Integrable Transition in the Sachdev-Ye-Kitaev Model},
+  author = {Garc\'{\i}a-Garc\'{\i}a, Antonio M. and Loureiro, Bruno and Romero-Berm\'udez, Aurelio and Tezuka, Masaki},
+  journal = {Phys. Rev. Lett.},
+  volume = {120},
+  issue = {24},
+  pages = {241603},
+  numpages = {6},
+  year = {2018},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.120.241603},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.120.241603}
+}
+
+@article{PhysRevD.94.086007,
+  title = {Transport in a gravity dual with a varying gravitational coupling constant},
+  author = {Garc\'{\i}a-Garc\'{\i}a, Antonio M. and Loureiro, Bruno and Romero-Berm\'udez, Aurelio},
+  journal = {Phys. Rev. D},
+  volume = {94},
+  issue = {8},
+  pages = {086007},
+  numpages = {21},
+  year = {2016},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.94.086007},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.94.086007}
+}
+
+@article{PhysRevD.93.065025,
+  title = {Marginal and irrelevant disorder in Einstein-Maxwell backgrounds},
+  author = {Garc\'{\i}a-Garc\'{\i}a, Antonio M. and Loureiro, Bruno},
+  journal = {Phys. Rev. D},
+  volume = {93},
+  issue = {6},
+  pages = {065025},
+  numpages = {13},
+  year = {2016},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.93.065025},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.93.065025}
 }
