--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,15 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@article{cornacchia2022learning,
+      title = {Learning curves for the multi-class teacher-student perceptron},
+      author = {Cornacchia, Elisabetta and Mignacco, Francesca and Veiga, Rodrigo and Gerbelot, Cédric and Loureiro, Bruno and Zdeborová, Lenka},
+      year={2022},
+      eprint={2203.12094},
+      arxiv={2203.12094},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
 
 @article{clarte2022theoretical,
       title={Theoretical characterization of uncertainty in high-dimensional linear classification},
@@ -45,7 +53,7 @@
 
 @article{bereyhi2022bayesian,
     title={Bayesian Inference with Nonlinear Generative Models: Comments on Secure Learning},
-    author={Ali Bereyhi and Bruno Loureiro and Florent Krzakala and Ralf R. MÃ¼ller and Hermann Schulz-Baldes},
+    author={Ali Bereyhi and Bruno Loureiro and Florent Krzakala and Ralf R. Müller and Hermann Schulz-Baldes},
     year={2022},
     eprint={2201.09986},
     arxiv = {2201.09986},
@@ -83,89 +91,77 @@
     primaryClass={stat.ML}
 }
 
-@InProceedings{pmlr-v145-goldt21a,
-  title = 	 {he Gaussian equivalence of generative models for learning with shallow neural networks},
-  author =       {Goldt, Sebastian and Loureiro, Bruno and Reeves, Galen and Krzakala, Florent and Mézard, Marc and Zdeborov\'a, Lenka},
-  booktitle = 	 {Proceedings of The Second Mathematical and Scientific Machine Learning Conference},
-  pages = 	 {1--46},
-  year = 	 {2021},
-  editor = 	 {Bruna, Joan and Hesthaven, Jan S and Zdeborová, Lenka},
-  volume = 	 {145},
-  series = 	 {Proceedings of Machine Learning Research},
-  month = 	 {16--19 Aug},
-  publisher =    {PMLR},
-  pdf = 	 {https://msml21.github.io/papers/id50.pdf},
-  url = 	 {https://msml21.github.io/papers/id50.pdf},
+@article{goldt2020phase,
+    title={The Gaussian equivalence of generative models for learning with shallow neural networks},
+    author={Sebastian Goldt and Bruno Loureiro and Galen Reeves and Florent Krzakala and Marc Mézard and Lenka Zdeborová},
+    year={2020},
+    eprint={2006.14709},
+    arxiv = {2006.14709},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
 }
 
-@InProceedings{pmlr-v107-aubin20a,
-  title = 	 {Exact asymptotics for phase retrieval and compressed sensing with random generative priors},
-  author =       {Aubin, Benjamin and Loureiro, Bruno and Baker, Antoine and Krzakala, Florent and Zdeborov\'a, Lenka},
-  booktitle = 	 {Proceedings of The First Mathematical and Scientific Machine Learning Conference},
-  pages = 	 {55--73},
-  year = 	 {2020},
-  editor = 	 {Lu, Jianfeng and Ward, Rachel},
-  volume = 	 {107},
-  series = 	 {Proceedings of Machine Learning Research},
-  month = 	 {20--24 Jul},
-  publisher =    {PMLR},
-  pdf = 	 {http://proceedings.mlr.press/v107/aubin20a/aubin20a.pdf},
-  url = 	 {https://proceedings.mlr.press/v107/aubin20a.html},
+@article{maillard2020phase,
+    title={Phase retrieval in high dimensions: Statistical and computational phase transitions},
+    author={Antoine Maillard and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+    year={2020},
+    eprint={2006.05228},
+    arxiv = {2006.05228},
+    archivePrefix={arXiv},
+    primaryClass={math.ST}
 }
 
-@inproceedings{NEURIPS2020_7ec0dbee,
- author = {Maillard, Antoine and Loureiro, Bruno and Krzakala, Florent and Zdeborov\'{a}, Lenka},
- booktitle = {Advances in Neural Information Processing Systems},
- editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin},
- pages = {11071--11082},
- publisher = {Curran Associates, Inc.},
- title = {Phase retrieval in high dimensions: Statistical and computational phase transitions},
- url = {https://proceedings.neurips.cc/paper/2020/file/7ec0dbeee45813422897e04ad8424a5e-Paper.pdf},
- pdf = {https://proceedings.neurips.cc/paper/2020/file/7ec0dbeee45813422897e04ad8424a5e-Paper.pdf},
- volume = {33},
- year = {2020}
+@ARTICLE{Gerace2020,
+       author = {{Gerace}, Federica and {Loureiro}, Bruno and
+         {Krzakala}, Florent and {M{\'e}zard}, Marc and {Zdeborov{\'a}}, Lenka},
+        title = "{Generalisation error in learning with random features and the hidden manifold model}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Mathematics - Probability, Statistics - Machine Learning},
+         year = "2020",
+        month = "February",
+          eid = {arXiv:2002.09339},
+        pages = {arXiv:2002.09339},
+        arxiv = {2002.09339},
+archivePrefix = {arXiv},
+       eprint = {2002.09339s},
+ primaryClass = {math.ST},
 }
 
-@InProceedings{pmlr-v119-gerace20a,
-  title = 	 {Generalisation error in learning with random features and the hidden manifold model},
-  author =       {Gerace, Federica and Loureiro, Bruno and Krzakala, Florent and Mezard, Marc and Zdeborova, Lenka},
-  booktitle = 	 {Proceedings of the 37th International Conference on Machine Learning},
-  pages = 	 {3452--3462},
-  year = 	 {2020},
-  editor = 	 {III, Hal Daumé and Singh, Aarti},
-  volume = 	 {119},
-  series = 	 {Proceedings of Machine Learning Research},
-  month = 	 {13--18 Jul},
-  publisher =    {PMLR},
-  pdf = 	 {http://proceedings.mlr.press/v119/gerace20a/gerace20a.pdf},
-  url = 	 {https://proceedings.mlr.press/v119/gerace20a.html},
+@ARTICLE{Aubin2019b,
+       author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Baker}, Antoine and
+         {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
+        title = "{Exact asymptotics for phase retrieval and compressed sensing with random generative priors}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing, Mathematics - Probability, Statistics - Machine Learning},
+         year = "2019",
+        month = "May",
+          eid = {arXiv:1912.02008},
+        pages = {arXiv:1912.02008},
+        arxiv = {1912.02008},
+archivePrefix = {arXiv},
+       eprint = {1912.02008},
+ primaryClass = {math.ST},
 }
 
-@ARTICLE{9240945,
-  author={Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborová, Lenka},
-  journal={IEEE Transactions on Information Theory},
-  title={The Spiked Matrix Model With Generative Priors},
-  year={2021},
-  volume={67},
-  number={2},
-  pages={1156-1181},
-  doi={10.1109/TIT.2020.3033985}
-  }
-
-@inproceedings{NEURIPS2019_2f3c6a4c,
- author = {Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and Krzakala, Florent and Zdeborov\'{a}, Lenka},
- booktitle = {Advances in Neural Information Processing Systems},
- editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
- pages = {},
- publisher = {Curran Associates, Inc.},
- title = {The spiked matrix model with generative priors},
- url = {https://proceedings.neurips.cc/paper/2019/file/2f3c6a4cd8af177f6456e7e51a916ff3-Paper.pdf},
- pdf = {https://proceedings.neurips.cc/paper/2019/file/2f3c6a4cd8af177f6456e7e51a916ff3-Paper.pdf},
- volume = {32},
- year = {2019}
+@ARTICLE{Aubin2019,
+       author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Maillard}, Antoine and
+         {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
+        title = "{The spiked matrix model with generative priors}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing, Mathematics - Probability, Statistics - Machine Learning},
+         year = "2019",
+        month = "May",
+          eid = {arXiv:1905.12385},
+        pages = {arXiv:1905.12385},
+        arxiv = {1905.12385},
+archivePrefix = {arXiv},
+       eprint = {1905.12385},
+ primaryClass = {math.ST},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190512385A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Andrade2018,
+@Article{Andrade2018,
 author="Andrade, Tom{\'a}s
 and Garc{\'i}a-Garc{\'i}a, Antonio M.
 and Loureiro, Bruno",
