--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@article{gerace2022gaussian,
+      title = {Gaussian Universality of Linear Classifiers with Random Labels in High-Dimension},
+      author = {Gerace, Federica and Krzakala, Florent and Loureiro, Bruno and Stephan, Ludovic and Zdeborová, Lenka},
+      year={2022},
+      eprint={2205.13303},
+      arxiv={2205.13303},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{gerace2022gaussian,
+      title = {Subspace clustering in high-dimensions: Phase transitions & Statistical-to-Computational gap},
+      author = {Pesce, Luca and Loureiro, Bruno and Krzakala, Florent and Zdeborová, Lenka},
+      year={2022},
+      eprint={2205.13527},
+      arxiv={2205.13527},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
 @article{cornacchia2022learning,
       title = {Learning curves for the multi-class teacher-student perceptron},
       author = {Cornacchia, Elisabetta and Mignacco, Francesca and Veiga, Rodrigo and Gerbelot, Cédric and Loureiro, Bruno and Zdeborová, Lenka},
@@ -127,38 +147,26 @@ archivePrefix = {arXiv},
  primaryClass = {math.ST},
 }
 
-@ARTICLE{Aubin2019b,
-       author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Baker}, Antoine and
-         {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
-        title = "{Exact asymptotics for phase retrieval and compressed sensing with random generative priors}",
-      journal = {arXiv e-prints},
-     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing, Mathematics - Probability, Statistics - Machine Learning},
-         year = "2019",
-        month = "May",
-          eid = {arXiv:1912.02008},
-        pages = {arXiv:1912.02008},
-        arxiv = {1912.02008},
-archivePrefix = {arXiv},
-       eprint = {1912.02008},
- primaryClass = {math.ST},
+@article{aubin2019phase,
+      title = {Exact asymptotics for phase retrieval and compressed sensing with random generative priors},
+      author = {Aubin, Benjamin and Loureiro, Bruno and Baker, Antoine and
+        Krzakala, Florent and Zdeborová, Lenka},
+      year={2019},
+      eprint={1912.02008},
+      arxiv={1912.02008},
+      archivePrefix={arXiv},
+      primaryClass={math.ST}
 }
 
-@ARTICLE{Aubin2019,
-       author = {{Aubin}, Benjamin and {Loureiro}, Bruno and {Maillard}, Antoine and
-         {Krzakala}, Florent and {Zdeborov{\'a}}, Lenka},
-        title = "{The spiked matrix model with generative priors}",
-      journal = {arXiv e-prints},
-     keywords = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing, Mathematics - Probability, Statistics - Machine Learning},
-         year = "2019",
-        month = "May",
-          eid = {arXiv:1905.12385},
-        pages = {arXiv:1905.12385},
-        arxiv = {1905.12385},
-archivePrefix = {arXiv},
-       eprint = {1905.12385},
- primaryClass = {math.ST},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190512385A},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{aubin2019spiked,
+      title = {The spiked matrix model with generative priors},
+      author = {Aubin, Benjamin and Loureiro, Bruno and Maillard, Antoine and
+        Krzakala, Florent and Zdeborová, Lenka},
+      year={2019},
+      eprint={1905.12385},
+      arxiv={1905.12385},
+      archivePrefix={arXiv},
+      primaryClass={math.ST}
 }
 
 @Article{Andrade2018,
