--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,27 @@
 ---
 ---
 
+@article{schroder2023deterministic,
+      title = {Deterministic equivalent and error universality of deep random features learning},
+      author = {Schröder, Dominik and Cui, Hugo and Dmitriev, Daniil and Loureiro, Bruno},
+      year={2023},
+      eprint={2302.00401},
+      arxiv={2302.00401},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{clarte2022overparametrized,
+      title = {A study of uncertainty quantification in overparametrized high-dimensional models},
+      author = {Lucas Clarté and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2022},
+      eprint={2210.12760},
+      arxiv={2210.12760},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+
 @article{gerace2022gaussian,
       title = {Gaussian Universality of Linear Classifiers with Random Labels in High-Dimension},
       author = {Gerace, Federica and Krzakala, Florent and Loureiro, Bruno and Stephan, Ludovic and Zdeborová, Lenka},
@@ -11,7 +32,7 @@
       primaryClass={stat.ML}
 }
 
-@article{gerace2022gaussian,
+@article{pesce2022subspace,
       title = {Subspace clustering in high-dimensions: Phase transitions & Statistical-to-Computational gap},
       author = {Pesce, Luca and Loureiro, Bruno and Krzakala, Florent and Zdeborová, Lenka},
       year={2022},
