--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,56 @@
 ---
 ---
 
+@article{arnaboldi2023escaping,
+      title = {Escaping mediocrity: how two-layer networks learn hard single-index models with SGD},
+      author = {Luca Arnaboldi and Florent Krzakala and Bruno Loureiro and Ludovic Stephan},
+      year={2023},
+      eprint={2305.18502},
+      arxiv={2305.18502},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{dandi2023learning,
+      title = {Learning Two-Layer Neural Networks, One (Giant) Step at a Time},
+      author = {Yatin Dandi and Florent Krzakala and Bruno Loureiro and Luca Pesce and Ludovic Stephan},
+      year={2023},
+      eprint={2305.18270},
+      arxiv={2305.18270},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{clarte2023ec,
+      title = {Expectation consistency for calibration of neural networks},
+      author = {Lucas Clarté and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
+      year={2023},
+      eprint={2303.02644},
+      arxiv={2303.02644},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{arnaboldi2023high,
+      title = {From high-dimensional & mean-field dynamics to dimensionless ODEs: A unifying approach to SGD in two-layers networks},
+      author = {Luca Arnaboldi and Ludovic Stephan and Florent Krzakala and Bruno Loureiro},
+      year={2023},
+      eprint={2302.05882},
+      arxiv={2302.05882},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{pesce2023gaussian,
+      title = {Are Gaussian data all you need? Extents and limits of universality in high-dimensional generalized linear estimation},
+      author = {Luca Pesce and Florent Krzakala and Bruno Loureiro and Ludovic Stephan},
+      year={2022},
+      eprint={2302.08923},
+      arxiv={2302.08923},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
 @article{schroder2023deterministic,
       title = {Deterministic equivalent and error universality of deep random features learning},
       author = {Schröder, Dominik and Cui, Hugo and Dmitriev, Daniil and Loureiro, Bruno},
@@ -12,7 +62,7 @@
 }
 
 @article{clarte2022overparametrized,
-      title = {A study of uncertainty quantification in overparametrized high-dimensional models},
+      title = {On double-descent in uncertainty quantification in overparametrized models},
       author = {Lucas Clarté and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
       year={2022},
       eprint={2210.12760},
@@ -23,7 +73,7 @@
 
 
 @article{gerace2022gaussian,
-      title = {Gaussian Universality of Linear Classifiers with Random Labels in High-Dimension},
+      title = {Gaussian Universality of Perceptrons with Random Labels},
       author = {Gerace, Federica and Krzakala, Florent and Loureiro, Bruno and Stephan, Ludovic and Zdeborová, Lenka},
       year={2022},
       eprint={2205.13303},
