--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -107,6 +107,8 @@
 }
 
 @inproceedings{Dandi2023,
+ abbr={NeurIPS},
+ bibtex_show={true},
  author = {Dandi, Yatin and Stephan, Ludovic and Krzakala, Florent and Loureiro, Bruno and Zdeborov\'{a}, Lenka},
  booktitle = {Advances in Neural Information Processing Systems},
  editor = {A. Oh and T. Neumann and A. Globerson and K. Saenko and M. Hardt and S. Levine},
@@ -178,16 +180,24 @@
   arxiv={2210.12760},
 }
 
-
 @article{gerace2022gaussian,
-      title = {Gaussian Universality of Perceptrons with Random Labels},
-      author = {Gerace, Federica and Krzakala, Florent and Loureiro, Bruno and Stephan, Ludovic and Zdeborová, Lenka},
-      year={2022},
-      eprint={2205.13303},
-      arxiv={2205.13303},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
+  abbr={PRE},
+  bibtex_show={true},
+  title = {Gaussian universality of perceptrons with random labels},
+  author = {Gerace, Federica and Krzakala, Florent and Loureiro, Bruno and Stephan, Ludovic and Zdeborov\'a, Lenka},
+  journal = {Phys. Rev. E},
+  volume = {109},
+  issue = {3},
+  pages = {034305},
+  numpages = {18},
+  year = {2024},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.109.034305},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.109.034305},
+  arxiv={2205.13303},
 }
+
 
 @inproceedings{pesce2022subspace,
  abbr={NeurIPS},
