--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,33 @@
 ---
 ---
 
+@misc{arnaboldi2024online,
+      title={Online Learning and Information Exponents: On The Importance of Batch size, and Time/Complexity Tradeoffs},
+      author={Luca Arnaboldi and Yatin Dandi and Florent Krzakala and Bruno Loureiro and Luca Pesce and Ludovic Stephan},
+      year={2024},
+      eprint={2406.02157},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@misc{defilippis2024dimensionfree,
+      title={Dimension-free deterministic equivalents for random feature regression},
+      author={Leonardo Defilippis and Bruno Loureiro and Theodor Misiakiewicz},
+      year={2024},
+      eprint={2405.15699},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@misc{troiani2024fundamental,
+      title={Fundamental limits of weak learnability in high-dimensional multi-index models},
+      author={Emanuele Troiani and Yatin Dandi and Leonardo Defilippis and Lenka Zdeborová and Bruno Loureiro and Florent Krzakala},
+      year={2024},
+      eprint={2405.15480},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
 @article{clarté2024analysis,
       title={Analysis of Bootstrap and Subsampling in High-dimensional Regularized Regression},
       author={Lucas Clarté and Adrien Vandenbroucque and Guillaume Dalle and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
