--- a/_news/icml2024.md
+++ b/_news/icml2024.md
@@ -7,6 +7,6 @@ inline: true
 Our three works:
 - [*Asymptotics of feature learning in two-layer networks after one gradient-step*](https://arxiv.org/abs/2402.04980)
 - [*Asymptotics of Learning with Deep Structured (Random) Features*](https://arxiv.org/abs/2402.13999)
-- *Online Learning and Information Exponents: The Importance of Batch size & Time/Complexity Tradeoffs*
+- [*Online Learning and Information Exponents: The Importance of Batch size & Time/Complexity Tradeoffs*](https://arxiv.org/abs/2406.02157)
 
 were accepted for publication at ICML 2024! See you in Vienna in July!
