--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -40,5 +40,6 @@ As well as the most widely used optimisation algorithms used to train them, such
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
 | Sept 11     | - Introduction <br> - Recap of Linear Algebra         |  [Slides](../assets/iaso2024/lecture1_novids.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture1.ipynb)|
-| Sept 18     | - Recap of Probability <br> - Supervised Learning       |       |
-| Sept 25     | - Least Squares regression   |       |
+| Sept 18     | - Recap of Probability <br> - Supervised Learning     |  [Slides](../assets/iaso2024/lecture2.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture2.ipynb)     |
+| Sept 25     | - Supervised Learning (continued)   | [Slides](../assets/iaso2024/lecture3.pdf)      |
+| Oct 02     | - Least-squares regression   |       |
