--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -35,6 +35,15 @@ Our goal is to build a basic understanding of the mathematics behind some of the
 
 As well as the most widely used optimisation algorithms used to train them, such as stochastic gradient descent.
 
+## Recommended literature
+
+The material in this course takes inspiration from the following excellent ressources:
+
+- Bach, Francis. [Learning theory from first principles](https://www.di.ens.fr/~fbach/ltfp_book.pdf). MIT press, 2024.
+- Hastie, Trevor, et al. [The elements of statistical learning: data mining, inference, and prediction](https://hastie.su.domains/ElemStatLearn/). Vol. 2. New York: springer, 2009.
+- Murphy, Kevin P. [Machine learning: a probabilistic perspective](https://probml.github.io/pml-book/book1.html). MIT press, 2012.
+- Wasserman, Larry. [All of statistics: a concise course in statistical inference](https://egrcc.github.io/docs/math/all-of-statistics.pdf). Springer Science & Business Media, 2013.
+
 ## Course Schedule
 
 | Date        | Lecture Topic                | Materials                            |
@@ -42,4 +51,6 @@ As well as the most widely used optimisation algorithms used to train them, such
 | Sept 11     | - Introduction <br> - Recap of Linear Algebra         |  [Slides](../assets/iaso2024/lecture1_novids.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture1.ipynb)|
 | Sept 18     | - Recap of Probability <br> - Supervised Learning     |  [Slides](../assets/iaso2024/lecture2.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture2.ipynb)     |
 | Sept 25     | - Supervised Learning (continued)   | [Slides](../assets/iaso2024/lecture3.pdf)      |
-| Oct 02     | - Least-squares regression   |       |
+| Oct 02     | - Least-squares regression   |       | [Slides](../assets/iaso2024/lecture4.pdf)
+| Oct 09     | - Least-squares regression (continued)  |  [Slides](../assets/iaso2024/lecture5.pdf)     |
+| Oct 16     | - Ridge regression  |  [Slides]()     |
