--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -53,4 +53,5 @@ The material in this course takes inspiration from the following excellent resso
 | Sept 25     | - Supervised Learning (continued)   | [Slides](../assets/iaso2024/lecture3.pdf)      |
 | Oct 02     | - Least-squares regression   |       | [Slides](../assets/iaso2024/lecture4.pdf)
 | Oct 09     | - Least-squares regression (continued)  |  [Slides](../assets/iaso2024/lecture5.pdf)     |
-| Oct 16     | - Ridge regression  |  [Slides]()     |
+| Oct 16     | - Bias-variance decomposition  |  [Slides](../assets/iaso2024/lecture6.pdf)     |
+| Oct 25     | Midterm exam  |    |
