--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -51,7 +51,7 @@ The material in this course takes inspiration from the following excellent resso
 | Sept 11     | - Introduction <br> - Recap of Linear Algebra         |  [Slides](../assets/iaso2024/lecture1_novids.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture1.ipynb)|
 | Sept 18     | - Recap of Probability <br> - Supervised Learning     |  [Slides](../assets/iaso2024/lecture2.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture2.ipynb)     |
 | Sept 25     | - Supervised Learning (continued)   | [Slides](../assets/iaso2024/lecture3.pdf)      |
-| Oct 02     | - Least-squares regression   |       | [Slides](../assets/iaso2024/lecture4.pdf)
+| Oct 02     | - Least-squares regression   |  [Slides](../assets/iaso2024/lecture4.pdf) | 
 | Oct 09     | - Least-squares regression (continued)  |  [Slides](../assets/iaso2024/lecture5.pdf)     |
 | Oct 16     | - Bias-variance decomposition  |  [Slides](../assets/iaso2024/lecture6.pdf)     |
 | Oct 25     | Midterm exam  |    |
