--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,35 @@
 ---
 ---
 
+
+@misc{dandi2024random,
+      title={A Random Matrix Theory Perspective on the Spectrum of Learned Features and Asymptotic Generalization Capabilities},
+      author={Yatin Dandi and Luca Pesce and Hugo Cui and Florent Krzakala and Yue M. Lu and Bruno Loureiro},
+      year={2024},
+      eprint={2410.18938},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+}
+
+@misc{vilucchio2024geometry,
+      title={On the Geometry of Regularization in Adversarial Training: High-Dimensional Asymptotics and Generalization Bounds},
+      author={Matteo Vilucchio and Nikolaos Tsilivis and Bruno Loureiro and Julia Kempe},
+      year={2024},
+      eprint={2410.16073},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+}
+
+@misc{soletskyi2024theoretical,
+      title={A theoretical perspective on mode collapse in variational inference},
+      author={Roman Soletskyi and Marylou Gabrié and Bruno Loureiro},
+      year={2024},
+      eprint={2410.13300},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2410.13300},
+}
+
 @misc{arnaboldi2024online,
       title={Online Learning and Information Exponents: On The Importance of Batch size, and Time/Complexity Tradeoffs},
       author={Luca Arnaboldi and Yatin Dandi and Florent Krzakala and Bruno Loureiro and Luca Pesce and Ludovic Stephan},
