--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,13 +30,23 @@
       url={https://arxiv.org/abs/2410.13300},
 }
 
-@misc{arnaboldi2024online,
-      title={Online Learning and Information Exponents: On The Importance of Batch size, and Time/Complexity Tradeoffs},
-      author={Luca Arnaboldi and Yatin Dandi and Florent Krzakala and Bruno Loureiro and Luca Pesce and Ludovic Stephan},
-      year={2024},
-      eprint={2406.02157},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
+
+@InProceedings{arnaboldi2024online,
+  abbr={ICML},
+  bibtex_show={true},
+  title = 	 {Online Learning and Information Exponents: The Importance of Batch size &amp; {T}ime/{C}omplexity Tradeoffs},
+  author =       {Arnaboldi, Luca and Dandi, Yatin and Krzakala, Florent and Loureiro, Bruno and Pesce, Luca and Stephan, Ludovic},
+  booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
+  pages = 	 {1730--1762},
+  year = 	 {2024},
+  editor = 	 {Salakhutdinov, Ruslan and Kolter, Zico and Heller, Katherine and Weller, Adrian and Oliver, Nuria and Scarlett, Jonathan and Berkenkamp, Felix},
+  volume = 	 {235},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {21--27 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://raw.githubusercontent.com/mlresearch/v235/main/assets/arnaboldi24a/arnaboldi24a.pdf},
+  url = 	 {https://proceedings.mlr.press/v235/arnaboldi24a.html},
+  abstract = 	 {We study the impact of the batch size $n_b$ on the iteration time $T$ of training two-layer neural networks with one-pass stochastic gradient descent (SGD) on multi-index target functions of isotropic covariates. We characterize the optimal batch size minimizing the iteration time as a function of the hardness of the target, as characterized by the information exponents. We show that performing gradient updates with large batches $n_b \lesssim d^{\frac{\ell}{2}}$ minimizes the training time without changing the total sample complexity, where $\ell$ is the information exponent of the target to be learned and $d$ is the input dimension. However, larger batch sizes than $n_b \gg d^{\frac{\ell}{2}}$ are detrimental for improving the time complexity of SGD. We provably overcome this fundamental limitation via a different training protocol, <em>Correlation loss SGD</em>, which suppresses the auto-correlation terms in the loss function. We show that one can track the training progress by a system of low-dimensional ordinary differential equations (ODEs). Finally, we validate our theoretical results with numerical experiments.}
 }
 
 @misc{defilippis2024dimensionfree,
@@ -57,23 +67,44 @@
       primaryClass={stat.ML}
 }
 
-@article{clarté2024analysis,
-      title={Analysis of Bootstrap and Subsampling in High-dimensional Regularized Regression},
-      author={Lucas Clarté and Adrien Vandenbroucque and Guillaume Dalle and Bruno Loureiro and Florent Krzakala and Lenka Zdeborová},
-      year={2024},
-      eprint={2402.13622},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
+
+@InProceedings{clarté2024analysis,
+  abbr={UAI},
+  bibtex_show={true},
+  title = 	 {Analysis of Bootstrap and Subsampling in High-dimensional Regularized Regression},
+  author =       {Clart\'e, Lucas and Vandenbroucque, Adrien and Dalle, Guillaume and Loureiro, Bruno and Krzakala, Florent and Zdeborov\'a, Lenka},
+  booktitle = 	 {Proceedings of the Fortieth Conference on Uncertainty in Artificial Intelligence},
+  pages = 	 {787--819},
+  year = 	 {2024},
+  editor = 	 {Kiyavash, Negar and Mooij, Joris M.},
+  volume = 	 {244},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {15--19 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://raw.githubusercontent.com/mlresearch/v244/main/assets/clarte24a/clarte24a.pdf},
+  url = 	 {https://proceedings.mlr.press/v244/clarte24a.html},
+  abstract = 	 {We investigate popular resampling methods for estimating the uncertainty of statistical models, such as subsampling, bootstrap and the jackknife, and their performance in high-dimensional supervised regression tasks. We provide a tight asymptotic description of the biases and variances estimated by these methods in the context of generalized linear models, such as ridge and logistic regression, taking the limit where the number of samples $n$ and dimension $d$ of the covariates grow at a comparable rate: $\alpha=n/d$ fixed. Our findings are three-fold: i) resampling methods are fraught with problems in high dimensions and exhibit the double-descent-like behavior typical of these situations; ii) only when $\alpha$ is large enough do they provide consistent and reliable error estimations (we give convergence rates); iii) in the over-parametrized regime $\alpha&lt;1$ relevant to modern machine learning practice, their predictions are not consistent, even with optimal regularization.}
 }
 
-@misc{schroder2024asymptotics,
-      title={Asymptotics of Learning with Deep Structured (Random) Features},
-      author={Dominik Schröder and Daniil Dmitriev and Hugo Cui and Bruno Loureiro},
-      year={2024},
-      eprint={2402.13999},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
+
+@InProceedings{schroder2024asymptotics,
+  abbr={ICML},
+  bibtex_show={true},
+  title = 	 {Asymptotics of Learning with Deep Structured ({R}andom) Features},
+  author =       {Schr\"{o}der, Dominik and Dmitriev, Daniil and Cui, Hugo and Loureiro, Bruno},
+  booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
+  pages = 	 {43862--43894},
+  year = 	 {2024},
+  editor = 	 {Salakhutdinov, Ruslan and Kolter, Zico and Heller, Katherine and Weller, Adrian and Oliver, Nuria and Scarlett, Jonathan and Berkenkamp, Felix},
+  volume = 	 {235},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {21--27 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://raw.githubusercontent.com/mlresearch/v235/main/assets/schroder24a/schroder24a.pdf},
+  url = 	 {https://proceedings.mlr.press/v235/schroder24a.html},
+  abstract = 	 {For a large class of feature maps we provide a tight asymptotic characterisation of the test error associated with learning the readout layer, in the high-dimensional limit where the input dimension, hidden layer widths, and number of training samples are proportionally large. This characterization is formulated in terms of the population covariance of the features. Our work is partially motivated by the problem of learning with Gaussian rainbow neural networks, namely deep non-linear fully-connected networks with random but structured weights, whose row-wise covariances are further allowed to depend on the weights of previous layers. For such networks we also derive a closed-form formula for the feature covariance in terms of the weight matrices. We further find that in some cases our results can capture feature maps learned by deep, finite-width neural networks trained under gradient descent.}
 }
+
 
 @misc{tanner2024high,
       title={A High Dimensional Model for Adversarial Training: Geometry and Trade-Offs},
@@ -84,14 +115,24 @@
       primaryClass={stat.ML}
 }
 
-@misc{cui2024asymptotics,
-      title={Asymptotics of feature learning in two-layer networks after one gradient-step},
-      author={Hugo Cui and Luca Pesce and Yatin Dandi and Florent Krzakala and Yue M. Lu and Lenka Zdeborová and Bruno Loureiro},
-      year={2024},
-      eprint={2402.04980},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
+@InProceedings{cui2024asymptotics,
+  abbr={ICML},
+  bibtex_show={true},
+  title = 	 {Asymptotics of feature learning in two-layer networks after one gradient-step},
+  author =       {Cui, Hugo and Pesce, Luca and Dandi, Yatin and Krzakala, Florent and Lu, Yue and Zdeborova, Lenka and Loureiro, Bruno},
+  booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
+  pages = 	 {9662--9695},
+  year = 	 {2024},
+  editor = 	 {Salakhutdinov, Ruslan and Kolter, Zico and Heller, Katherine and Weller, Adrian and Oliver, Nuria and Scarlett, Jonathan and Berkenkamp, Felix},
+  volume = 	 {235},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {21--27 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://raw.githubusercontent.com/mlresearch/v235/main/assets/cui24d/cui24d.pdf},
+  url = 	 {https://proceedings.mlr.press/v235/cui24d.html},
+  abstract = 	 {In this manuscript, we investigate the problem of how two-layer neural networks learn features from data, and improve over the kernel regime, after being trained with a single gradient descent step. Leveraging the insight from (Ba et al., 2022), we model the trained network by a spiked Random Features (sRF) model. Further building on recent progress on Gaussian universality (Dandi et al., 2023), we provide an exact asymptotic description of the generalization error of the sRF in the high-dimensional limit where the number of samples, the width, and the input dimension grow at a proportional rate. The resulting characterization for sRFs also captures closely the learning curves of the original network model. This enables us to understand how adapting to the data is crucial for the network to efficiently learn non-linear functions in the direction of the gradient - where at initialization it can only express linear functions in this regime.}
 }
+
 
 @article{adomaityte2024,
       title = {High-dimensional robust regression under heavy-tailed data: Asymptotics and Universality},
