--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -58,3 +58,4 @@ The material in this course takes inspiration from the following excellent resso
 | Oct 30     | Reading week (no class)  |    |
 | Nov 06     | - Ridge regression  |  [Slides](../assets/iaso2024/lecture7.pdf)     |
 | Nov 13     | - Ridge regression (continued)  |  [Slides](../assets/iaso2024/lecture8.pdf)     |
+| Nov 20     | - Best subset selection <br> - LASSO  |  [Slides](../assets/iaso2024/lecture9.pdf)     |
