--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -59,3 +59,5 @@ The material in this course takes inspiration from the following excellent resso
 | Nov 06     | - Ridge regression  |  [Slides](../assets/iaso2024/lecture7.pdf)     |
 | Nov 13     | - Ridge regression (continued)  |  [Slides](../assets/iaso2024/lecture8.pdf)     |
 | Nov 20     | - Best subset selection <br> - LASSO  |  [Slides](../assets/iaso2024/lecture9.pdf)     |
+| Nov 27     | - LASSO (continued)  |  [Slides](../assets/iaso2024/lecture10.pdf)     |
+| Dec 04     | - PCA <br> - Feature maps  |  [Slides](../assets/iaso2024/lecture11.pdf)     |
