--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -61,3 +61,4 @@ The material in this course takes inspiration from the following excellent resso
 | Nov 20     | - Best subset selection <br> - LASSO  |  [Slides](../assets/iaso2024/lecture9.pdf)     |
 | Nov 27     | - LASSO (continued)  |  [Slides](../assets/iaso2024/lecture10.pdf)     |
 | Dec 04     | - PCA <br> - Feature maps  |  [Slides](../assets/iaso2024/lecture11.pdf)     |
+| Dec 04     | - Kernel ridge regression  |  [Slides](../assets/iaso2024/lecture12.pdf)     |
