--- a/_pages/iaso_2024.md
+++ b/_pages/iaso_2024.md
@@ -56,8 +56,9 @@ The material in this course takes inspiration from the following excellent resso
 | Oct 16     | - Bias-variance decomposition  |  [Slides](../assets/iaso2024/lecture6.pdf)     |
 | Oct 23     | Midterm exam  |    |
 | Oct 30     | Reading week (no class)  |    |
+| Nov 06     | - Ridge regression  |  [Slides](../assets/iaso2024/lecture7.pdf)     |
 | Nov 13     | - Ridge regression (continued)  |  [Slides](../assets/iaso2024/lecture8.pdf)     |
 | Nov 20     | - Best subset selection <br> - LASSO  |  [Slides](../assets/iaso2024/lecture9.pdf)     |
 | Nov 27     | - LASSO (continued)  |  [Slides](../assets/iaso2024/lecture10.pdf)     |
 | Dec 04     | - PCA <br> - Feature maps  |  [Slides](../assets/iaso2024/lecture11.pdf)     |
-| Dec 04     | - Kernel ridge regression  |  [Slides](../assets/iaso2024/lecture12.pdf)     |
+| Dec 11     | - Kernel ridge regression  |  [Slides](../assets/iaso2024/lecture12.pdf)     |
