--- a/_pages/iaso2024.md
+++ b/_pages/iaso2024.md
@@ -44,8 +44,8 @@ The material in this course takes inspiration from the following excellent resso
 
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
-| Sept 11     | - Introduction <br> - Recap of Linear Algebra         |  [Slides](../assets/iaso2024/lecture1_novids.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture1.ipynb)|
-| Sept 18     | - Recap of Probability <br> - Supervised Learning     |  [Slides](../assets/iaso2024/lecture2.pdf) <br> [Jupyter Notebook](../assets/iaso2024/td_lecture2.ipynb)     |
+| Sept 11     | - Introduction <br> - Recap of Linear Algebra         |  [Slides](../assets/iaso2024/lecture1_novids.pdf) |
+| Sept 18     | - Recap of Probability <br> - Supervised Learning     |  [Slides](../assets/iaso2024/lecture2.pdf)|
 | Sept 25     | - Supervised Learning (continued)   | [Slides](../assets/iaso2024/lecture3.pdf)      |
 | Oct 02     | - Least-squares regression   |  [Slides](../assets/iaso2024/lecture4.pdf) |
 | Oct 09     | - Least-squares regression (continued)  |  [Slides](../assets/iaso2024/lecture5.pdf)     |
